So... this is awkward. I didn't solve the whitespace problem before. Now I solved it, it was problem generated by the span tag in the reset button. Now I'm using grid and media queries to make it fit in a better way

--- a/src/style.css
+++ b/src/style.css
@@ -29,34 +29,36 @@ p {
     text-align: center;
 }
 .scoreBoard {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    width: 100%;
     align-items: center;
     margin-top: 7rem;
     justify-content: center;
 }
 #score {
+    grid-area: 1/2;
     width: auto;
     font-size: 6rem;
     text-align: center;
-    justify-self: center;
 }
 #reset {
-    position: absolute;
-    left: calc(85% - 1.5rem);
-    width: 3rem;
-    height: 3rem;
-    border-radius: 1.5rem;
+    grid-area: 1/3;
+    justify-self: end;
+    margin-right: 5rem;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
     background-color: #FA4872;
 }
 #reset:hover {
     background-color: #AD2142;
 }
 #reset span {
-    width: 10rem;
     display: inline-block;
     position: relative;
-    top: 3rem;
-    left: -3.5rem;
+    top: 5rem;
+    text-align: center;
     font-size: .8rem;
 }
 .juego {
@@ -86,7 +88,6 @@ p {
 }
 #puntaje {
     width: 100%;
-    margin-bottom: 5rem;
 }
 #Rock{
     background-image: url('../assets/rock.png');
@@ -98,9 +99,9 @@ p {
     background-image: url('../assets/scissors.png');
 } 
 .credits {
+    display: flex;
     position: absolute;
     bottom: 0;
-    display: flex;
     justify-content: space-between;
     width: 100%;
     height: auto;
@@ -118,4 +119,10 @@ p {
     flex-direction: column;
     text-align: right;
     justify-content: end;
+}
+@media (max-width: 500px) {
+    #reset {
+        margin-right: 3rem;
+    }
+    
 }
